LIST OF CHANGES
---------------

 - iseq_product_metrics table: add columns to store in-house qc values

release 1.7
 - extend field size for mean_bait_coverage RT#495558, Change request No6

release 1.6
 - change the comment on iseq_run_lane_metrics.unexpected_tags_percent
 - update DBIx schema to reflect this change and propagate any changes
   to other tables of the live database

release 1.5
 - Ability to query by id_study_lims in LibraryDigest
 - Added unexpected tag and chimeric fields to iseq_product_metric and iseq_run_lane_metric tables
 - Ability to restrict by (legacy) library id
 - Added extra fields to entity which are needed by library merging script for adding to iRODS meta data.
   Key changed to included cycle count as well as paired_flag. Corresponding test updated. 

release 1.4
 - update DBIx binding to include second index sequence
 - check that flowcell LIMs id and barcode map 1:1 (RT#481156)

release 1.3
 - mapping for additional lims interface fields for sample data

release 1.2
 - value of the GCLP data lims flag has changed - reflect this

release 1.1
 - bug fix in readonly variable declaration

release 1.0
 - DBIx schema update following database schema changes
 - contains_human_dna and contaminated_human_dna columns have been converted
   from varchar to tinyint, inflators/deflators for these columns dropped

release 0.7
 - new module - library digest - retrieves information about libraries,
     groups it either by library or by sample

release 0.6
 - added a role providing methods to determine what LIMs system the record originated from

release 0.5
 - ensure contains_human_dna and contaminated_human_dna behave in a boolean manner
 - update mapping of library_id lims field to database fields
 - ensure missing study link does not lead to code failure when accessing e-mails of followers, etc.
 - add mapping for lane_id

release 0.4
 - following db schema changes, update the DBIx binding

release 0.3